--- a/frontend/src/app/auth/component/login/login.component.html
+++ b/frontend/src/app/auth/component/login/login.component.html
@@ -8,7 +8,7 @@
           <h1 class="title">Login</h1>
           <div class="field">
             <p class="control has-icons-left has-icons-right">
-              <input class="input" type="email" placeholder="Email">
+              <input (ngModel)="loginRequest.email" class="input" type="email" placeholder="Email">
               <span class="icon is-small is-left">
                 <fa-icon [icon]="faEnvelope"></fa-icon>
               </span>
@@ -16,7 +16,7 @@
           </div>
           <div class="field">
             <p class="control has-icons-left">
-              <input class="input" type="password" placeholder="Password">
+              <input (ngModel)="loginRequest.password" class="input" type="password" placeholder="Password">
               <span class="icon is-small is-left">
                 <fa-icon [icon]="faLock"></fa-icon>
               </span>
@@ -24,7 +24,7 @@
           </div>
           <div class="field">
             <p class="control">
-              <button class="button is-success is-fullwidth">
+              <button (click)="login()" class="button is-success is-fullwidth">
                 Login
               </button>
             </p>
