Add frontend authentication
Add leads controller

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,1 +1,11 @@
-<router-outlet></router-outlet>
+<div class="columns is-gapless">
+  <div class="column is-narrow">
+    <app-navbar></app-navbar>
+  </div>
+  <div class="column">
+    <router-outlet></router-outlet>
+  </div>
+</div>
+
+
+
