--- a/frontend/src/app/lead/component/menu/menu.component.html
+++ b/frontend/src/app/lead/component/menu/menu.component.html
@@ -12,5 +12,13 @@
         Neuen lead erstellen
       </a>
     </li>
+    <li>
+      <a [routerLink]="['/leads']" routerLinkActive="is-active">
+        <span class="icon">
+          <fa-icon [icon]="faList"></fa-icon>
+        </span>
+        Alle leads
+      </a>
+    </li>
   </ul>
 </aside>
