--- a/frontend/src/app/shared/component/navbar/navbar.component.html
+++ b/frontend/src/app/shared/component/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <aside class="menu">
   <ul class="menu-list">
     <li>
-      <a [routerLink]="['leads', 'all']" routerLinkActive="is-active" [routerLinkActiveOptions]="{exact: false}">
+      <a [routerLink]="['leads']" routerLinkActive="is-active" [routerLinkActiveOptions]="{exact: false}">
         <span class="icon is-large">
           <fa-icon [icon]="faBuilding"></fa-icon>
         </span>
