--- a/frontend/src/app/auth/component/login/login.component.html
+++ b/frontend/src/app/auth/component/login/login.component.html
@@ -5,30 +5,36 @@
         <div class="column is-8">
         </div>
         <div class="column">
+          <div class="notification is-danger" *ngIf="this.error">
+            <button class="delete" (click)="this.error = null"></button>
+            {{this.error.message}}
+          </div>
           <h1 class="title">Login</h1>
-          <div class="field">
-            <p class="control has-icons-left has-icons-right">
-              <input [(ngModel)]="loginRequest.email" class="input" type="email" placeholder="Email">
-              <span class="icon is-small is-left">
+          <form (submit)="login()">
+            <div class="field">
+              <p class="control has-icons-left has-icons-right">
+                <input name="email" [(ngModel)]="loginRequest.email" class="input" type="email" placeholder="Email">
+                <span class="icon is-small is-left">
                 <fa-icon [icon]="faEnvelope"></fa-icon>
               </span>
-            </p>
-          </div>
-          <div class="field">
-            <p class="control has-icons-left">
-              <input [(ngModel)]="loginRequest.password" class="input" type="password" placeholder="Password">
-              <span class="icon is-small is-left">
+              </p>
+            </div>
+            <div class="field">
+              <p class="control has-icons-left">
+                <input name="password" [(ngModel)]="loginRequest.password" class="input" type="password" placeholder="Password">
+                <span class="icon is-small is-left">
                 <fa-icon [icon]="faLock"></fa-icon>
               </span>
-            </p>
-          </div>
-          <div class="field">
-            <p class="control">
-              <button (click)="login()" class="button is-success is-fullwidth">
-                Login
-              </button>
-            </p>
-          </div>
+              </p>
+            </div>
+            <div class="field">
+              <p class="control">
+                <button type="submit" class="button is-success is-fullwidth">
+                  Login
+                </button>
+              </p>
+            </div>
+          </form>
         </div>
       </div>
     </div>
