--- a/frontend/src/app/lead/component/lead.component.html
+++ b/frontend/src/app/lead/component/lead.component.html
@@ -1,8 +1,15 @@
-<div class="columns">
-  <div class="column is-2" style="padding: 25px;">
-    <app-menu></app-menu>
+<div class="columns is-gapless">
+  <div class="column is-narrow">
+    <app-navbar></app-navbar>
   </div>
   <div class="column">
-    <router-outlet></router-outlet>
+    <div class="columns">
+      <div class="column is-2" style="padding: 25px;">
+        <app-lead-menu></app-lead-menu>
+      </div>
+      <div class="column">
+        <router-outlet></router-outlet>
+      </div>
+    </div>
   </div>
 </div>
