--- a/frontend/src/app/lead/component/show-lead/show-lead.component.html
+++ b/frontend/src/app/lead/component/show-lead/show-lead.component.html
@@ -1,1 +1,12 @@
-<h1 class="title">LEAD: {{this.lead.name}}</h1>
+<div class="columns" style="padding: 25px;">
+  <ng-container *ngIf="this.isLoading">
+    <div class="column is-12">
+      <app-loading-spinner></app-loading-spinner>
+    </div>
+  </ng-container>
+
+  <ng-container *ngIf="!this.isLoading && this.lead">
+    <h1 class="title">LEAD: {{this.lead.name}}</h1>
+  </ng-container>
+</div>
+
