--- a/frontend/src/app/lead/component/all-lead/all-lead.component.html
+++ b/frontend/src/app/lead/component/all-lead/all-lead.component.html
@@ -14,14 +14,14 @@
         <article class="media">
           <div class="media-left">
             <figure class="image is-64x64">
-              <img src="https://bulma.io/images/placeholders/128x128.png" alt="Image">
+              <img [src]="lead.imageUrl" [alt]="lead.name">
             </figure>
           </div>
           <div class="media-content">
             <div class="content">
               <p>
                 <strong>{{lead.name}}</strong> -
-                <small>{{lead.social.email}}</small>
+                <small>{{lead.social?.email}}</small>
                 <br>
                 {{lead.description}}
               </p>
