--- a/frontend/src/app/shared/component/navbar/navbar.component.html
+++ b/frontend/src/app/shared/component/navbar/navbar.component.html
@@ -1,6 +1,15 @@
 <aside class="menu">
   <ul class="menu-list">
     <li>
+      <a>
+        <span class="icon is-large">
+          <figure class="image is-48x48">
+            <img class="is-rounded" src="https://image.shutterstock.com/image-vector/man-character-face-avatar-glasses-450w-542759665.jpg">
+          </figure>
+        </span>
+      </a>
+    </li>
+    <li>
       <a [routerLink]="['/leads']" routerLinkActive="is-active" [routerLinkActiveOptions]="{exact: false}">
         <span class="icon is-large">
           <fa-icon [icon]="icons.faBuilding"></fa-icon>
