--- a/frontend/src/app/shared/component/loading-spinner/loading-spinner.component.html
+++ b/frontend/src/app/shared/component/loading-spinner/loading-spinner.component.html
@@ -1,1 +1,12 @@
+<div class="columns is-mobile is-centered" *ngIf="subtitle && title">
+  <div class="column">
+    <h1 class="title">
+      {{title}}
+    </h1>
+    <h2 class="subtitle">
+      {{subtitle}}
+    </h2>
+  </div>
+</div>
+
 <div class="spinner"></div>
